2004-05-20  Bradley Bell  <btb@icculus.org>

	* arch/ogl/gr.c, main/menu.c: fix a couple of defines

	* main/inferno.c: integrated some niceautomap stuff from d1x

2004-05-20  Matthew Mueller  <donut@dakotacom.net>

	* arch/win32/joyhh.c: fixed the config bug where it'd always put
	in some weird axis (d1x r1.3)

	* arch/win32/init.c: set win32 icon to icon from resource file
	(d1x r1.4)

	* arch/win32/key.c: win32: fixed space key not working in messages
	(d1x r1.2)

2004-05-20  Bradley Bell  <btb@icculus.org>

	* texmap/Makefile.am, texmap/scanline.c: don't need texmappers for
	OpenGL

2004-05-20  Matthew Mueller  <donut@dakotacom.net>

	* main/inferno.c: document -gl_refresh (d1x r1.20)

	* arch/win32/joyhh.c, arch/win32/mouse.c: w32: check
	-no(mouse|joystick) within respective _init() funcs (d1x r1.2,
	r1.6)

	* arch/win32/win32.c: fixed win32 gr_*_mode funcs that I forgot to
	change the arg type for (d1x r1.5)

2004-05-20  Victor Rachels  <sekmu@tisiphone.dhs.org>

	* arch/win32/digi.c: altsounds (d1x r1.6)

2004-05-20  Matthew Mueller  <donut@dakotacom.net>

	* arch/win32/digi.c: fixed a major memory leak and removed a bit
	of redundancy (d1x r1.5)

	* arch/win32/digi.c: call digi_reset_digi_sounds in digi_close to
	fix crashing (d1x r1.4)

	* arch/win32/digi.c: win32's digi_start_sound was not calling
	DS_release_slot after setting .playing=0, resulting in a
	memleak. Thanks to Stefan Ring for catching this (d1x r1.9)

	* arch/win32/joyhh.c: remove joySetCapture in win32 joystick code,
	apparently it was somehow causing some joysticks (Sidewinder
	Precision 2) to only turn when the stick was moving, but not when
	at turned but held stationary.  And it was completely unused
	anyway.  Thanks to Stefan Ring for (somehow) finding this (d1x
	r1.4)

	* main/game.c: add alt+enter to toggle fullscreen (in addition to
	previous key combos (d1x r1.29)

	* arch/ogl/wgl.c: minor cleanup, use same for loop for filling r,
	g, and b values (d1x r1.15)
