@@ -1,4 +1,4 @@
-/* $Id: fvi.c,v 1.3 2003-10-10 09:36:35 btb Exp $ */
+/* $Id: fvi.c,v 1.4 2004-05-21 00:02:34 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -497,7 +497,7 @@ int check_line_to_face(vms_vector *newp,vms_vector *p0,vms_vector *p1,segment *s
 	if ((seg-Segments)==-1)
 		Error("segnum == -1 in check_line_to_face()");
 
-	create_abs_vertex_lists(&num_faces,vertex_list,seg-Segments,side);
+	create_abs_vertex_lists(&num_faces, vertex_list, seg - Segments, side, __FILE__, __LINE__);
 
 	//use lowest point number
 	if (num_faces==2) {
@@ -597,7 +597,7 @@ int special_check_line_to_face(vms_vector *newp,vms_vector *p0,vms_vector *p1,se
 	if ((seg-Segments)==-1)
 		Error("segnum == -1 in special_check_line_to_face()");
 
-	create_abs_vertex_lists(&num_faces,vertex_list,seg-Segments,side);
+	create_abs_vertex_lists(&num_faces, vertex_list, seg - Segments, side, __FILE__, __LINE__);
 	vm_vec_sub(&move_vec,p1,p0);
 
 	//figure out which edge(s) to check against
@@ -1389,7 +1389,7 @@ void find_hitpoint_uv(fix *u,fix *v,fix *l,vms_vector *pnt,segment *seg,int side
 	if (segnum==-1)
 		Error("segnum == -1 in find_hitpoint_uv()");
 
-	create_abs_vertex_lists(&num_faces,vertex_list,segnum,sidenum);
+	create_abs_vertex_lists(&num_faces, vertex_list, segnum, sidenum, __FILE__, __LINE__);
 	create_all_vertnum_lists(&num_faces,vertnum_list,segnum,sidenum);
 
 	//now the hard work.
@@ -1524,7 +1524,7 @@ int sphere_intersects_wall(vms_vector *pnt,int segnum,fix rad)
 					if ((seg-Segments)==-1)
 						Error("segnum == -1 in sphere_intersects_wall()");
 
-					create_abs_vertex_lists(&num_faces,vertex_list,seg-Segments,side);
+					create_abs_vertex_lists(&num_faces, vertex_list, seg - Segments, side, __FILE__, __LINE__);
 
 					face_hit_type = check_sphere_to_face( pnt,&seg->sides[side],
 										face,((num_faces==1)?4:3),rad,vertex_list);
