@@ -1,3 +1,9 @@
+2004-05-20  Victor Rachels  <sekmu@tisiphone.dhs.org>
+
+	* main/fvi.c, main/gameseg.c, main/gameseg.h, main/physics.c:
+	added debug info for illegal side type (d1x r1.2, r1.4, r1.2,
+	r1.2)
+
 2004-05-20  Bradley Bell  <btb@icculus.org>
 
 	* arch/ogl/gr.c, main/menu.c: fix a couple of defines
